[aliases]
test=pytest

[coverage:run]
source = service
omit =
    service/tests/*
parallel = True
concurrency =
    thread
    multiprocessing

[metadata]
name = service
license = GPL-2+
license_file = LICENSE.rst
author = Jose Lopez
author_email = j.b.lopez.acc@gmail.com
description = Car pooling service for CABIFY code challenge
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://git.ligo.org/emfollow/service
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: workforce
    License :: OSI Approved :: MIT license
    Operating System :: POSIX
    Programming Language :: Python :: 3.7
    Topic :: Internet
    Topic :: Service :: Car Sharing
project_urls =
    Source Code = https://gitlab.com/cabify-challenge/car-pooling-challenge-aifriend/blob/master/service

[options]
packages = find:
python_requires = >=3.7
